--- a/css/style.css
+++ b/css/style.css
@@ -990,3 +990,46 @@ section h1 {
       background-color: black;
     }
 
+
+
+@media(max-width:768px){
+h1 {
+  font-size: 30px !important;
+  line-height: 1.3;
+}
+
+h2 {
+  font-size: 24px !important;
+}
+
+h3 {
+  font-size: 20px !important;
+}
+
+h4 {
+  font-size: 18px !important;
+}
+
+h5 {
+  font-size: 16px !important;
+}
+p , a , li {
+  font-size: 14px !important;
+  line-height: 1.6;
+}
+
+button {
+  font-size: 14px !important;
+  padding: 10px 20px !important;
+}
+
+.secation a {
+  margin: 4px;
+  margin-bottom: 15px ;
+  width: 25px !important;
+  height: 25px !important;
+}
+}
+
+
+
