--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 body {
   font-family: "Cairo", sans-serif;
   font-weight: 400;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 h1,
@@ -1018,6 +1018,7 @@ button {
   height: 25px !important;
 }
 }
+
 
 
 
