--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,13 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overscroll-behavior-x: none;
 }
 
 body {
   font-family: "Cairo", sans-serif;
   font-weight: 400;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
 }
 
 h1,
@@ -1018,6 +1019,7 @@ button {
   height: 25px !important;
 }
 }
+
 
 
 
